# windows-systems-toolkit

./: LICENSE  README.md
.github/workflows/: build.yml
include/: ipc_pipe.h  process_manager.h
src/: service_control.cpp  thread_pool.cpp
windows-systems-toolkit/: .gitignore  CMakeLists.txt
windows-systems-toolkit/include/: service_control.h  thread_pool.h
windows-systems-toolkit/src/: ipc_pipe.cpp  main.cpp  process_manager.cpp  thread_pool.cpp
